<resources>
    <string name="app_name">Splitur</string>
    <string name="get_started">Get Started</string>
    <string name="earn">Earn</string>
    <string name="subscribe">Subscribe,</string>
    <string name="share">Share,</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="label_terms"><![CDATA[Terms &\nConditions]]></string>
    <string name="label_conditions"><![CDATA[Tap the Links Below and Read the Terms of use and Privacy Policy Carefully by scrolling through all the lines, And Click on the “I agree” Button Once you Acknowledge and Understand the Terms of Use and Privacy Policy. If are Unable to read or Understand the Terms of Use or the Privacy Policy. Do not Click on the “I agree” Button.]]></string>
    <string name="label_agree"><![CDATA[By continuing you agree Splitur Terms of Use & Privacy Policy ]]></string>
    <string name="subscription_name">Subscription Name</string>
    <string name="subscription_detail">Enter the name of the Subscription which you would like to share</string>
    <string name="password_verification_method">Password verification method</string>
    <string name="next">Next</string>
    <string name="share_with_the_world">Share with the world</string>
    <string name="refund">Refund</string>
    <string name="swap">Swap</string>
    <string name="spiltur_score">Spiltur score</string>
    <string name="str_welcome_text">Share,\nSubscribe,\nEarn</string>
    <string name="term_1">I understand that once i enter the UPI ID above the transaction is complete and there is no way that the transaciton can be reversed and if there is any mistake in the Information provided, Splitur will not be responsible for any losses or damages.</string>
    <string name="term_2">I verify that the Above UPI Id entered belongs to me and not a third party, If found that the UPI ID belongs to a third party your account may be restricted.</string>
    <string name="gurantee_text">You will receive a full or partial refund including the fees if you do not receive the Credentials or your service stops within 28 days from today.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="app_link"><![CDATA[https://play.google.com/store/apps/details?id=split.com.app]]></string>-->
    <string name="inr_sign">₹</string>
</resources>