<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.splash.Splash">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/get_started_image"
        android:id="@+id/get_started_image"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get_started_image"
        android:text="@string/share"
        style="@style/headingTextSplash"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-90dp"
        android:id="@+id/share"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share"
        android:text="@string/subscribe"
        style="@style/headingTextSplash"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-10dp"
        android:id="@+id/subscribe"/>


    <TextView
        android:id="@+id/earn"
        style="@style/headingTextSplash"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-10dp"
        android:text="@string/earn"
        app:layout_constraintBottom_toTopOf="@+id/get_started_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subscribe" />


    <Button
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:text="@string/get_started"
        style="@style/buttonStyle"
        android:background="@drawable/button_round_bg"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:id="@+id/get_started_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>