<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.main.view.subscription_name.SubscriptionName">

    <include
        android:id="@+id/sub_name_toolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_name_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:paddingBottom="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="29sp"
                    android:textColor="@color/white"
                    android:text="@string/subscription_name"
                    android:id="@+id/sub_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sub_name"
                    android:text="@string/subscription_detail"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:alpha="0.6"
                    android:textSize="14sp"
                    android:layout_marginEnd="12dp"
                    android:id="@+id/sub_detail"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sub_detail"
                    android:hint="Netflix Premium"
                    android:maxLength="14"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:inputType="textCapSentences"
                    android:textColorHint="@color/hint_color"
                    android:fontFamily="@font/poppin_regular"
                    android:textSize="15sp"
                    android:drawablePadding="20dp"
                    android:gravity="start|center"
                    android:background="@drawable/round_back"
                    android:backgroundTint="@color/light_blue"
                    android:padding="12dp"
                    android:drawableLeft="@drawable/ic_user"
                    android:id="@+id/ed_group_title"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/verification_method_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ed_group_title"
                    android:layout_marginTop="18dp"
                    android:paddingTop="13dp"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:paddingBottom="15dp"
                    android:background="@drawable/subscription_bg">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/semiBoldText"
                        android:textSize="17sp"
                        android:text="@string/password_verification_method"
                        android:id="@+id/verification_method"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/verification_method"
                        android:text="If both required Select All"
                        style="@style/normalText"
                        android:textSize="11sp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="-4dp"
                        android:id="@+id/verification_text"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/authLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp"
                        app:layout_constraintEnd_toStartOf="@id/otpLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        android:background="@drawable/selected_gradient_stroke"
                        android:paddingTop="20dp"
                        android:tag="selected"
                        android:paddingBottom="20dp"
                        android:paddingStart="14dp"
                        android:paddingEnd="14dp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        app:layout_constraintTop_toBottomOf="@id/verification_text">

                        <TextView
                            android:id="@+id/email_and"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="13sp"
                            android:textColor="@color/orange"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:text="Email &amp;"

                            />

                        <TextView
                            android:id="@+id/pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/white"
                            android:alpha="0.8"
                            android:layout_marginStart="@dimen/_2sdp"
                            app:layout_constraintStart_toEndOf="@id/email_and"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:text="Password"

                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/otpLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:tag="unselected"
                        android:paddingStart="14dp"
                        android:paddingEnd="14dp"
                        android:layout_marginStart="@dimen/_3sdp"
                        app:layout_constraintStart_toEndOf="@id/authLayout"
                        android:background="@drawable/unselected_bg"
                        app:layout_constraintTop_toBottomOf="@id/verification_text">

                        <TextView
                            android:id="@+id/otp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="13sp"
                            android:textColor="@color/orange"
                            android:alpha="0.7"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:text="OTP"

                            />

                        <TextView
                            android:id="@+id/verification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/white"
                            android:alpha="0.5"
                            android:layout_marginStart="@dimen/_2sdp"
                            app:layout_constraintStart_toEndOf="@id/otp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:text="Verification"/>


                    </androidx.constraintlayout.widget.ConstraintLayout>





                </androidx.constraintlayout.widget.ConstraintLayout>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/verification_method_layout"
                    android:text="Next"
                    style="@style/buttonStyle"
                    android:background="@drawable/button_round_bg"
                    android:paddingStart="80dp"
                    android:paddingEnd="80dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:id="@+id/BTN_SUB_NEXT"/>


            </androidx.constraintlayout.widget.ConstraintLayout>



=    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>